k8s/Userapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
  labels:
    app: userapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
        - name: userapi
          image: lucvdzandt/userapi:latest
          ports:
            - containerPort: 8081
